--- a/drafts/tabletest2.html
+++ b/drafts/tabletest2.html
@@ -10,9 +10,10 @@
 <link rel="modulepreload" href="../_observablehq/client.js">
 <link rel="modulepreload" href="../_observablehq/runtime.js">
 <link rel="modulepreload" href="../_observablehq/stdlib.js">
-<link rel="modulepreload" href="../_import/components/sorterTable.b455407f.js">
+<link rel="modulepreload" href="../_import/components/sorterTableClass.e826138a.js">
 <link rel="modulepreload" href="../_npm/d3@7.9.0/_esm.js">
 <link rel="modulepreload" href="../_observablehq/stdlib/duckdb.js">
+<link rel="modulepreload" href="../_npm/htl@0.3.1/_esm.js">
 <link rel="modulepreload" href="../_npm/@duckdb/duckdb-wasm@1.28.0/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-array@3.2.4/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-axis@3.0.0/_esm.js">
@@ -44,7 +45,7 @@
 <link rel="modulepreload" href="../_npm/d3-timer@3.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-transition@3.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/d3-zoom@3.0.0/_esm.js">
-<link rel="modulepreload" href="../_npm/apache-arrow@18.1.0/_esm.js">
+<link rel="modulepreload" href="../_npm/apache-arrow@19.0.0/_esm.js">
 <link rel="modulepreload" href="../_npm/internmap@2.0.3/_esm.js">
 <link rel="modulepreload" href="../_npm/delaunator@5.0.1/_esm.js">
 <link rel="modulepreload" href="../_npm/tslib@2.8.1/_esm.js">
@@ -56,16 +57,17 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1736763011778});
+registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737299104509});
 registerTable("oxford", FileAttachment("../data/oxford_decarbonisation_data.parquet"));
 
-define({id: "5da2df3a", outputs: ["createTable"], body: async () => {
-const {createTable} = await import("../_import/components/sorterTable.b455407f.js");
-// import { sorterTable } from "./../components/sorterTableClass.js";
-return {createTable};
+define({id: "e85258d2", outputs: ["sorterTable"], body: async () => {
+const {sorterTable} = await import("../_import/components/sorterTableClass.e826138a.js");
+// import { createTable } from "./../components/sorterTable.js";
+
+return {sorterTable};
 }});
 
-define({id: "d22197ed", inputs: ["sql"], outputs: ["oxford_data"], body: async (sql) => {
+define({id: "2a11b13d", inputs: ["sql"], outputs: ["oxford_data"], body: async (sql) => {
 const oxford_data = await sql`  SELECT DISTINCT
     "UPRN" AS id,
     "LSOA code" AS lsoa,
@@ -112,44 +114,44 @@ const oxford_data = await sql`  SELECT DISTINCT
     "Substation - Headroom" AS substation_headroom,
     "Substation - % headroom" AS substation_headroom_pct,
     "Substation - Demand_rag" AS substation_demand
-FROM oxford b;`;
+FROM oxford b
+WHERE substation_peakload >= 500 AND pv_generation is not null;`;
 return {oxford_data};
 }});
 
-define({id: "02502bdf", inputs: ["oxford_data"], outputs: ["buildings","flattenned"], body: (oxford_data) => {
+define({id: "fd5729b6", inputs: ["oxford_data"], outputs: ["buildings"], body: (oxford_data) => {
 const buildings = [...oxford_data];
-const flattenned = buildings.map((p) => ({ ...p }));
+// const flattenned = buildings.map((p) => ({ ...p }));
 // display(buildings);
 // display(flattenned);
-return {buildings,flattenned};
+return {buildings};
 }});
 
-define({id: "3a93e71b", outputs: ["cols"], body: () => {
-const cols = [
-  { column: "lsoa", nominals: null },
-  {
-    column: "insulation_rating",
-    ordinals: ["Unknown", "A", "B", "C", "D", "E", "F", "G"],
-  },
-  {
-    column: "insulation_ewall",
-    // ordinals: null,
-    nominals: null,
-    // ordinals: ["Unknown", "A", "B", "C", "D", "E", "F", "G"],
-  },
-  {
-    column: "pv_generation",
-    thresholds: [
-      0, 1000, 2000, 3000, 4000, 5000, 6000, 7000, 8000, 9000, 10000, 20000,
-      30000, 40000, 50000,
-    ],
-  },
-  {
-    column: "ashp_size",
-    thresholds: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50],
-  },
-];
-return {cols};
+define({id: "90cd0078", body: () => {
+// const cols = [
+//   { column: "lsoa", nominals: null },
+//   {
+//     column: "insulation_rating",
+//     ordinals: ["Unknown", "A", "B", "C", "D", "E", "F", "G"],
+//   },
+//   {
+//     column: "insulation_ewall",
+//     // ordinals: null,
+//     nominals: null,
+//     // ordinals: ["Unknown", "A", "B", "C", "D", "E", "F", "G"],
+//   },
+//   {
+//     column: "pv_generation",
+//     thresholds: [
+//       0, 1000, 2000, 3000, 4000, 5000, 6000, 7000, 8000, 9000, 10000, 20000,
+//       30000, 40000, 50000,
+//     ],
+//   },
+//   {
+//     column: "ashp_size",
+//     thresholds: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50],
+//   },
+// ];
 }});
 
 define({id: "ec01b706", inputs: ["Mutable"], outputs: ["useState","selected","setSelected"], body: (Mutable) => {
@@ -162,19 +164,23 @@ const [selected, setSelected] = useState({});
 return {useState,selected,setSelected};
 }});
 
-define({id: "e124d779", inputs: ["createTable","buildings","cols","setSelected"], outputs: ["table"], body: (createTable,buildings,cols,setSelected) => {
-// const table = new createTable(buildings, cols, () => {});
+define({id: "e5f92493", outputs: ["columns"], body: () => {
+const columns = [
+  "id",
+  "lsoa",
+  "insulation_rating",
+  "insulation_ewall",
+  { column: "pv_generation", alias: "PV Generation" },
+  "ashp_size",
+  "substation_demand",
+];
+return {columns};
+}});
 
-const table = new createTable(
-  buildings.map((p) => ({ ...p })),
-  cols,
-  (changes) => {
-    console.log("Table changed:", changes);
-    setSelected(changes.selection);
-  }
-);
-
-// const table = sorter_table.createTable(buildings, cols, () => {});
+define({id: "8b345ab2", inputs: ["sorterTable","buildings","columns","tableChanged","cellRenderers"], outputs: ["table"], body: (sorterTable,buildings,columns,tableChanged,cellRenderers) => {
+const table = new sorterTable(buildings, columns, tableChanged, {
+  cellRenderers,
+});
 return {table};
 }});
 
@@ -182,21 +188,230 @@ define({id: "19721a50", inputs: ["display","table"], body: (display,table) => {
 display(table.getNode());
 }});
 
-define({id: "15548009", inputs: ["display","selected"], body: (display,selected) => {
+define({id: "d1d62983", inputs: ["setSelected"], outputs: ["tableChanged"], body: (setSelected) => {
+function tableChanged(event) {
+  console.log("Table changed:", event);
+
+  if (event.type === "filter") {
+    console.log("Filtered indices:", event.indeces);
+    console.log("Filter rule:", event.rule);
+  }
+
+  if (event.type === "sort") {
+    console.log("Sorted indices:", event.indeces);
+    console.log("Sort criteria:", event.sort);
+  }
+
+  if (event.type === "selection") {
+    console.log("Selected rows:", event.selection);
+    setSelected(event.selection);
+    console.log("Selection rule:", event.rule);
+  }
+}
+return {tableChanged};
+}});
+
+define({id: "c720684d", inputs: ["html","display","selected"], body: (html,display,selected) => {
+html`Selected`;
 display(selected);
+}});
+
+define({id: "c6d9531a", body: () => {
+// const sortButton = document.createElement("button");
+// sortButton.textContent = "Sort by LSOA (Descending)";
+// // document.body.appendChild(sortButton);
+
+// sortButton.addEventListener("click", () => {
+//   const ageSortCtrl = table.sortControllers.find(
+//     (ctrl) => ctrl.getColumn() === "lsoa"
+//   );
+//   ageSortCtrl.setDirection("down");
+//   table.sortChanged(ageSortCtrl);
+// });
+}});
+
+define({id: "c48be364", inputs: ["d3","buildings"], outputs: ["colorScale"], body: (d3,buildings) => {
+// Create a color scale (example)
+const colorScale = d3
+  .scaleSequential(d3.interpolateViridis)
+  .domain([0, d3.max(buildings, (d) => d.pv_generation)]);
+// display(colorScale(1000));
+return {colorScale};
+}});
+
+define({id: "2b33b424", inputs: ["d3","buildings","sparkbar","colorScale"], outputs: ["cellRenderers"], body: (d3,buildings,sparkbar,colorScale) => {
+// Define cell renderers
+const cellRenderers = {
+  pv_generation: (value, rowData) => {
+    const max = d3.max(buildings, (d) => d.pv_generation); // Calculate max dynamically
+    return sparkbar(max, colorScale)(value, rowData); // Call sparkbar with calculated max
+  },
+  ashp_size: (data) => {
+    const span = document.createElement("span");
+    span.innerText = data >= 180 ? "More" : "Less";
+    return span;
+  },
+};
+return {cellRenderers};
+}});
+
+define({id: "e249a1e9", inputs: ["d3"], outputs: ["sparkbar"], body: (d3) => {
+function sparkbar(max, colorScale, alpha = 0.6) {
+  return (x, rowData) => {
+    // console.log("Rendering sparkbar for:", x, rowData);
+    // Now takes 'x' (cell value) and 'rowData' (entire row)
+    const color = d3.color(colorScale(x));
+    color.opacity = alpha;
+    const div = document.createElement("div");
+    div.style.background = color;
+    div.style.width = `${(100 * x) / max}%`;
+    div.style.float = "right";
+    div.style.paddingRight = "3px";
+    div.style.boxSizing = "border-box";
+    div.style.overflow = "visible";
+    div.style.display = "flex";
+    div.style.justifyContent = "end";
+    div.innerText = x.toLocaleString("en");
+    return div;
+  };
+}
+return {sparkbar};
+}});
+
+define({id: "d3e24e39", inputs: ["d3"], outputs: ["sparkarea"], body: (d3) => {
+function sparkarea(data, rowData, options = {}) {
+  const {
+    width = 240,
+    height = 20,
+    fillColor = "#faa",
+    strokeColor = "red",
+  } = options;
+
+  // Extract x and y values from the data (assuming your data has a 'history' property)
+  const X = data.map((d) => d.date); // Assuming 'date' property for x-axis
+  const Y = data.map((d) => d.value); // Assuming 'value' property for y-axis
+
+  // Handle cases where there is not enough data for an area chart
+  if (X.length < 2 || Y.length < 2) {
+    const message = document.createElement("div");
+    message.innerText = "Not enough data";
+    return message;
+  }
+
+  const x = d3
+    .scaleTime() // Use scaleTime for dates
+    .domain(d3.extent(X))
+    .range([0, width]);
+  const y = d3.scaleLinear().domain(d3.extent(Y)).range([height, 0]);
+
+  const area = d3
+    .area()
+    .x((d, i) => x(X[i]))
+    .y1((d, i) => y(Y[i]))
+    .y0(height)
+    .defined((d, i) => !isNaN(X[i]) && !isNaN(Y[i]));
+
+  // Create the SVG element
+  const svg = d3
+    .create("svg")
+    .attr("width", width)
+    .attr("height", height)
+    .style("vertical-align", "middle")
+    .style("margin", "-3px 0")
+    .node(); // Get the actual SVG element
+
+  // Add the area path
+  d3.select(svg).append("path").attr("fill", fillColor).attr("d", area(data));
+
+  // Add the outline path
+  d3.select(svg)
+    .append("path")
+    .attr("fill", "none")
+    .attr("stroke", strokeColor)
+    .attr("d", area.lineY1()(data));
+
+  // Create a container div
+  const container = document.createElement("div");
+  container.appendChild(svg);
+
+  return container;
+}
+return {sparkarea};
 }});
 
 </script>
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
-<div class="observablehq observablehq--block"><!--:5da2df3a:--></div>
+<div class="observablehq observablehq--block"><!--:e85258d2:--></div>
 <h1 id="table-experiments-2" tabindex="-1"><a class="observablehq-header-anchor" href="#table-experiments-2">Table Experiments 2</a></h1>
-<div class="observablehq observablehq--block"><!--:d22197ed:--></div>
-<div class="observablehq observablehq--block"><!--:02502bdf:--></div>
-<div class="observablehq observablehq--block"><!--:3a93e71b:--></div>
+<div class="observablehq observablehq--block"><!--:2a11b13d:--></div>
+<div class="observablehq observablehq--block"><!--:fd5729b6:--></div>
+<div class="observablehq observablehq--block"><!--:90cd0078:--></div>
 <div class="observablehq observablehq--block"><!--:ec01b706:--></div>
-<div class="observablehq observablehq--block"><!--:e124d779:--></div>
+<div class="observablehq observablehq--block"><!--:e5f92493:--></div>
+<div class="observablehq observablehq--block"><!--:8b345ab2:--></div>
 <div class="observablehq observablehq--block"><!--:19721a50:--></div>
-<div class="observablehq observablehq--block"><!--:15548009:--></div>
+<div class="observablehq observablehq--block"><!--:d1d62983:--></div>
+<div class="observablehq observablehq--block"><!--:c720684d:--></div>
+<div class="observablehq observablehq--block"><!--:c6d9531a:--></div>
+<div class="observablehq observablehq--block"><!--:c48be364:--></div>
+<div class="observablehq observablehq--block"><!--:2b33b424:--></div>
+<div class="observablehq observablehq--block"><!--:e249a1e9:--></div>
+<div class="observablehq observablehq--block"><!--:d3e24e39:--></div>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+<style>
+/* .sorter-table  table {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.sorter-table tbody tr:nth-child(even) {
+  background-color: #f8f8f8; /* Zebra striping */
+}
+
+.sorter-table tbody tr:hover {
+  background-color: #f0f0f0; /* Highlight on hover */
+}
+
+.sorter-table thead {
+  background-color: #e0e0e0; /* Header background */
+}
+
+.sorter-table th {
+  text-align: left;
+  padding: 8px;
+  font-size: 10px;
+  border-bottom: 2px solid #ddd;
+}
+
+.sorter-table td {
+  padding: 8px;
+  border: 1px solid #ddd;
+  text-align: left;
+  vertical-align: middle;
+}
+
+
+.sorter-table .sidebar { /* Target the sidebar using the table's class */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50px; /* Adjust as needed */
+  padding: 10px;
+  border-right: 1px solid #ccc;
+}
+
+.sorter-table .sidebar i { /* Target icons within the sidebar */
+  margin-bottom: 15px;
+  cursor: pointer;
+  color: gray;
+}
+
+.sorter-table .sidebar i:hover {
+  color: black; /* Highlight on hover */
+} */
+</style>
 </main>
 </div>
