--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link rel="modulepreload" href="./_import/components/sorterTableClass.e30ae16e.js">
 <link rel="modulepreload" href="./_import/components/glyph-designs/timeGlyph.a1969fec.js">
 <link rel="modulepreload" href="./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js">
-<link rel="modulepreload" href="./_import/components/radialglyph.e10c9304.js">
+<link rel="modulepreload" href="./_import/components/glyph-designs/radialglyph.111d8941.js">
 <link rel="modulepreload" href="./_import/components/gridded-glyphmaps/index.min.f034b425.js">
 <link rel="modulepreload" href="./_import/components/osgb/index.1d2476df.js">
 <link rel="modulepreload" href="./_import/components/decarb-model/budget-allocator.5c9a0a07.js">
@@ -30,7 +30,7 @@
 <link rel="modulepreload" href="./_import/components/leaflet/leaflet-map.498e936b.js">
 <link rel="modulepreload" href="./_import/components/sorterTable.b455407f.js">
 <link rel="modulepreload" href="./_import/components/input-table/input-table.247272e6.js">
-<link rel="modulepreload" href="./_import/components/helpers.1b7e9142.js">
+<link rel="modulepreload" href="./_import/components/helpers.c82b92f4.js">
 <link rel="modulepreload" href="./_npm/d3@7.9.0/_esm.js">
 <link rel="modulepreload" href="./_import/components/osgb/ellipsoid.1ac4eba6.js">
 <link rel="modulepreload" href="./_import/components/decarb-model/priority-queue.aea4e806.js">
@@ -220,14 +220,14 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737356014937});
-registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1737356014947});
-registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1737356014947});
-registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1737356014947});
+registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737377923509});
+registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1737377923519});
+registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1737377923519});
+registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1737377923520});
 registerTable("oxford", FileAttachment("./data/oxford_decarbonisation_data.parquet"));
 
-define({id: "5f42df2c", outputs: ["d3","flubber","require","Mutable","turf","bulmaToast","bulmaQuickview","sorterTable","TimeGlyph","GlyphCollection","StreamGraphGlyph","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","BudgetAllocator","InterventionManager","MiniDecarbModel","createTimelineInterface","LeafletMap","createTable","SummarizeColumn","createTableFormat","inferTypes","enrichGeoData","normaliseData","insideCell","debounceInput","saveToSession","getFromSession","transformCoordinates","transformGeometry","normalisebyGroup","aggregateValues"], body: async () => {
-const [{require}, {Mutable}, turf, bulmaToast, bulmaQuickview, {sorterTable}, {TimeGlyph, GlyphCollection}, {StreamGraphGlyph}, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {BudgetAllocator}, {InterventionManager, MiniDecarbModel}, {createTimelineInterface}, {LeafletMap}, {createTable}, {SummarizeColumn, createTableFormat}, {inferTypes, enrichGeoData, normaliseData, insideCell, debounceInput, saveToSession, getFromSession, transformCoordinates, transformGeometry, normalisebyGroup, aggregateValues}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/bulma-toast@2.4.4/_esm.js"), import("./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js"), import("./_import/components/sorterTableClass.e30ae16e.js"), import("./_import/components/glyph-designs/timeGlyph.a1969fec.js"), import("./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js"), import("./_import/components/radialglyph.e10c9304.js"), import("./_import/components/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/decarb-model/budget-allocator.5c9a0a07.js"), import("./_import/components/decarb-model/mini-decarbonisation.46bd522e.js"), import("./_import/components/decarb-model/timeline.2b635da2.js"), import("./_import/components/leaflet/leaflet-map.498e936b.js"), import("./_import/components/sorterTable.b455407f.js"), import("./_import/components/input-table/input-table.247272e6.js"), import("./_import/components/helpers.1b7e9142.js")]);
+define({id: "f07cf3e1", outputs: ["d3","flubber","require","Mutable","turf","bulmaToast","bulmaQuickview","sorterTable","TimeGlyph","GlyphCollection","StreamGraphGlyph","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","BudgetAllocator","InterventionManager","MiniDecarbModel","createTimelineInterface","LeafletMap","createTable","SummarizeColumn","createTableFormat","inferTypes","enrichGeoData","normaliseData","insideCell","debounceInput","saveToSession","getFromSession","transformCoordinates","transformGeometry","normalisebyGroup","aggregateValues"], body: async () => {
+const [{require}, {Mutable}, turf, bulmaToast, bulmaQuickview, {sorterTable}, {TimeGlyph, GlyphCollection}, {StreamGraphGlyph}, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {BudgetAllocator}, {InterventionManager, MiniDecarbModel}, {createTimelineInterface}, {LeafletMap}, {createTable}, {SummarizeColumn, createTableFormat}, {inferTypes, enrichGeoData, normaliseData, insideCell, debounceInput, saveToSession, getFromSession, transformCoordinates, transformGeometry, normalisebyGroup, aggregateValues}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/bulma-toast@2.4.4/_esm.js"), import("./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js"), import("./_import/components/sorterTableClass.e30ae16e.js"), import("./_import/components/glyph-designs/timeGlyph.a1969fec.js"), import("./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js"), import("./_import/components/glyph-designs/radialglyph.111d8941.js"), import("./_import/components/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/decarb-model/budget-allocator.5c9a0a07.js"), import("./_import/components/decarb-model/mini-decarbonisation.46bd522e.js"), import("./_import/components/decarb-model/timeline.2b635da2.js"), import("./_import/components/leaflet/leaflet-map.498e936b.js"), import("./_import/components/sorterTable.b455407f.js"), import("./_import/components/input-table/input-table.247272e6.js"), import("./_import/components/helpers.c82b92f4.js")]);
 console.log(">> Importing libraries...");
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
@@ -341,7 +341,7 @@ function useState(value) {
 return {useState};
 }});
 
-define({id: "142d6810", inputs: ["useState"], outputs: ["selected","setSelected","getInterventions","setInterventions","getResults","setResults","selectedIntervention","setSelectedIntervention","selectedInterventionIndex","setSelectedInterventionIndex","detailOnDemand","setDetailOnDemand","currentConfig","setCurrentConfig","tableFiltered","setTableFiltered"], body: (useState) => {
+define({id: "e40df91a", inputs: ["useState"], outputs: ["selected","setSelected","getInterventions","setInterventions","getResults","setResults","selectedIntervention","setSelectedIntervention","selectedInterventionIndex","setSelectedInterventionIndex","detailOnDemand","setDetailOnDemand","currentConfig","setCurrentConfig","tableFiltered","setTableFiltered"], body: (useState) => {
 console.log(">> Getters and Setters...");
 const [selected, setSelected] = useState([]); // selected data in table
 const [getInterventions, setInterventions] = useState([]); // list of interventions
@@ -351,7 +351,7 @@ const [selectedInterventionIndex, setSelectedInterventionIndex] =
   useState(null); // selected intervention index
 const [detailOnDemand, setDetailOnDemand] = useState(null); // detail on demand on map
 const [currentConfig, setCurrentConfig] = useState({}); // current configuration
-const [tableFiltered, setTableFiltered] = useState(null); // filtered table
+const [tableFiltered, setTableFiltered] = useState([]); // filtered table
 return {selected,setSelected,getInterventions,setInterventions,getResults,setResults,selectedIntervention,setSelectedIntervention,selectedInterventionIndex,setSelectedInterventionIndex,detailOnDemand,setDetailOnDemand,currentConfig,setCurrentConfig,tableFiltered,setTableFiltered};
 }});
 
@@ -447,9 +447,21 @@ table.getNode()
 ))
 }});
 
+define({id: "6f313450", mode: "inline", inputs: ["tableFilteredData","html","display"], body: async (tableFilteredData,html,display) => {
+display(await(
+tableFilteredData ? html`<p> No. of Filtered Data: ${tableFilteredData.length} </p>`: "" 
+))
+}});
+
 define({id: "3dea4862", mode: "inline", inputs: ["mapAggregationInput","display"], body: async (mapAggregationInput,display) => {
 display(await(
 mapAggregationInput
+))
+}});
+
+define({id: "b9abde73", mode: "inline", inputs: ["timelineSwitchInput","display"], body: async (timelineSwitchInput,display) => {
+display(await(
+timelineSwitchInput
 ))
 }});
 
@@ -850,6 +862,19 @@ const map_aggregate = Generators.input(mapAggregationInput);
 return {mapAggregationInput,map_aggregate};
 }});
 
+define({id: "03040749", inputs: ["Inputs","Generators"], outputs: ["timelineSwitchInput","timeline_switch"], body: (Inputs,Generators) => {
+// --- potentials and timeline  ---
+const timelineSwitchInput = Inputs.radio(
+  ["Decarbonisation Potentials", "Decarbonisation Timeline"],
+  {
+    label: "Show Data",
+    value: "Decarbonisation Potentials",
+  }
+);
+const timeline_switch = Generators.input(timelineSwitchInput);
+return {timelineSwitchInput,timeline_switch};
+}});
+
 define({id: "9aebd956", inputs: ["html","Event","Generators"], outputs: ["morphFactorInput","morph_factor"], body: (html,Event,Generators) => {
 // --- morph factor ---
 const morphFactorInput = html`<input
@@ -1244,6 +1269,13 @@ const data =
     : flatData;
 // console.log(">> DATA DATA DATA", data);
 return {selectedIntervenedBuildings,flatData,data};
+}});
+
+define({id: "504e390e", inputs: ["timeline_switch"], body: (timeline_switch) => {
+timeline_switch;
+// const glyphdata = aggregateValues(data, glyphVariables, "sum", true);
+// console.log(">> Glyph data", glyphdata);
+// console.log(normaliseData([{ a: 100, b: 200, c: 300 }], ["a", "b", "c"]));
 }});
 
 define({id: "1e1aab46", inputs: ["data"], outputs: ["excludedColumns","customOrder","tableColumns"], body: (data) => {
@@ -2004,7 +2036,7 @@ const morphGlyphMap = createMorphGlyphMap(1000, 800);
 return {createMorphGlyphMap,morphGlyphMap};
 }});
 
-define({id: "13b1f3b9", inputs: ["toggle_grids","glyphMap","glyphMapSpec","createLeafletMap","data","morphGlyphMap","createOverallPlot","yearlySummaryArray"], outputs: ["createGlyphMap"], body: (toggle_grids,glyphMap,glyphMapSpec,createLeafletMap,data,morphGlyphMap,createOverallPlot,yearlySummaryArray) => {
+define({id: "7d4a37f2", inputs: ["toggle_grids","glyphMap","glyphMapSpec","createLeafletMap","data","morphGlyphMap","timeline_switch","createOverallPotential","createOverallPlot","yearlySummaryArray"], outputs: ["createGlyphMap"], body: (toggle_grids,glyphMap,glyphMapSpec,createLeafletMap,data,morphGlyphMap,timeline_switch,createOverallPotential,createOverallPlot,yearlySummaryArray) => {
 function createGlyphMap(map_aggregate, width, height) {
   // console.log(width, height);
   if (map_aggregate == "Building Level") {
@@ -2018,11 +2050,10 @@ function createGlyphMap(map_aggregate, width, height) {
   } else if (map_aggregate == "LSOA Level") {
     return morphGlyphMap;
   } else if (map_aggregate == "LA Level") {
-    try {
+    if (timeline_switch == "Decarbonisation Potentials") {
+      return createOverallPotential(data);
+    } else {
       return createOverallPlot(yearlySummaryArray);
-    } catch (error) {
-      // console.error("Error in createOverallPlot:", error);
-      return {};
     }
   }
 }
@@ -2041,8 +2072,9 @@ function interactiveDrawFn(mode) {
 return {interactiveDrawFn};
 }});
 
-define({id: "5003c2c5", inputs: ["display"], body: async (display) => {
+define({id: "10050398", inputs: ["display"], body: async (display) => {
 display(await(
+// interactive draw function - change glyphs based on mode
 {
   // glyphMode;
   // decarbonisationGlyph.setGlyph({
@@ -2136,6 +2168,45 @@ let keysToNormalise = [
 // );
 // console.log(">> Normalised Recap", normalisedYearlyRecap);
 return {yearlySummaryArray,keysToNormalise};
+}});
+
+define({id: "8841c779", inputs: ["aggregateValues","glyphVariables","RadialGlyph","glyphColours"], outputs: ["createOverallPotential"], body: (aggregateValues,glyphVariables,RadialGlyph,glyphColours) => {
+function createOverallPotential(data, width = 1100, height = 800) {
+  const margin = { top: 30, right: 150, bottom: 120, left: 80 };
+  const innerWidth = width - margin.left - margin.right;
+  const innerHeight = height - margin.top - margin.bottom;
+
+  // Create canvas for drawing
+  const canvas = document.createElement("canvas");
+  canvas.width = innerWidth;
+  canvas.height = innerHeight;
+
+  const ctx = canvas.getContext("2d");
+
+  // Set cellSize dynamically
+  const cellSize = Math.min(innerWidth, innerHeight) / 2;
+
+  // Define x, y as the center of the canvas
+  const x = innerWidth / 2;
+  const y = innerHeight / 2;
+
+  let glyphdata = aggregateValues(data, glyphVariables, "sum", true);
+
+  console.log(
+    ">> Check radial glyph data",
+    glyphVariables.map((key) => glyphdata[key])
+  );
+
+  // Create and draw Radial Glyph
+  let rg = new RadialGlyph(
+    glyphVariables.map((key) => glyphdata[key]),
+    glyphColours
+  );
+  rg.draw(ctx, x, y, cellSize / 2);
+
+  return canvas;
+}
+return {createOverallPotential};
 }});
 
 define({id: "2b1041ed", inputs: ["d3"], outputs: ["createOverallPlot"], body: (d3) => {
@@ -2602,7 +2673,7 @@ return {createOverallPlot};
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
 <!-- ------------ Imports ------------ -->
-<div class="observablehq observablehq--block"><!--:5f42df2c:--></div>
+<div class="observablehq observablehq--block"><!--:f07cf3e1:--></div>
 <div class="observablehq observablehq--block"><!--:5dd85f8f:--></div>
 <!-- ---------------- Loading Raw Data ---------------- -->
 <div class="observablehq observablehq--block"><!--:fff1c897:--></div>
@@ -2611,7 +2682,7 @@ return {createOverallPlot};
 <div class="observablehq observablehq--block"><!--:74ca6350:--></div>
 <!-- ------------ Getter-Setter ------------ -->
 <div class="observablehq observablehq--block"><!--:04385e81:--></div>
-<div class="observablehq observablehq--block"><!--:142d6810:--></div>
+<div class="observablehq observablehq--block"><!--:e40df91a:--></div>
 <div class="observablehq observablehq--block"><!--:eefad3c9:--></div>
 <div class="observablehq observablehq--block"><!--:6ec1e3f5:--></div>
 <!-------- Stylesheets -------->
@@ -2656,7 +2727,7 @@ return {createOverallPlot};
             <div class="content">
               <!-- ${ObsTable} -->
               <observablehq-loading></observablehq-loading><!--:27617c0d:-->
-              <!-- <div>No. of intervened buildings: ${JSON.stringify(stackedResults.summary.intervenedCount)}</div> -->
+              <observablehq-loading></observablehq-loading><!--:6f313450:-->
             </div>
           </div>
         </div>
@@ -2670,6 +2741,7 @@ return {createOverallPlot};
       <div class="card-content">
         <div class="content">
           <observablehq-loading></observablehq-loading><!--:3dea4862:-->
+          <observablehq-loading></observablehq-loading><!--:b9abde73:-->
           <observablehq-loading></observablehq-loading><!--:66c049e1:-->
           <observablehq-loading></observablehq-loading><!--:eafe6dd4:-->
           <!-- ${html`${playButton} ${morphFactorInput}`} -->
@@ -2778,6 +2850,7 @@ return {createOverallPlot};
 <div class="observablehq observablehq--block"><!--:002f30fa:--></div>
 <div class="observablehq observablehq--block"><!--:ac287d14:--></div>
 <div class="observablehq observablehq--block"><!--:cc15167c:--></div>
+<div class="observablehq observablehq--block"><!--:03040749:--></div>
 <div class="observablehq observablehq--block"><!--:9aebd956:--></div>
 <div class="observablehq observablehq--block"><!--:5cf7509f:--></div>
 <div class="observablehq observablehq--block"><!--:a4dfa623:--></div>
@@ -2803,6 +2876,7 @@ return {createOverallPlot};
 <div class="observablehq observablehq--block"><!--:8d85d522:--></div>
 <!-- ----------------  D A T A  ---------------- -->
 <div class="observablehq observablehq--block"><!--:376d8384:--></div>
+<div class="observablehq observablehq--block"><!--:504e390e:--></div>
 <div class="observablehq observablehq--block"><!--:1e1aab46:--></div>
 <div class="observablehq observablehq--block"><!--:e81778ff:--></div>
 <div class="observablehq observablehq--block"><!--:0ac7290d:--></div>
@@ -2828,14 +2902,15 @@ return {createOverallPlot};
 <div class="observablehq observablehq--block"><!--:e0053c6e:--></div>
 <div class="observablehq observablehq--block"><!--:f5493bd3:--></div>
 <div class="observablehq observablehq--block"><!--:a0e83f83:--></div>
-<div class="observablehq observablehq--block"><!--:13b1f3b9:--></div>
+<div class="observablehq observablehq--block"><!--:7d4a37f2:--></div>
 <div class="observablehq observablehq--block"><!--:443fac77:--></div>
-<div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:5003c2c5:--></div>
+<div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:10050398:--></div>
 <div class="observablehq observablehq--block"><!--:f93e4c1e:--></div>
 <!-- ----------------  Link Table to Leaflet Map  ---------------- -->
 <div class="observablehq observablehq--block"><!--:9eb91f18:--></div>
 <!-- ----------------  Main Plot  ---------------- -->
 <div class="observablehq observablehq--block"><!--:8866168d:--></div>
+<div class="observablehq observablehq--block"><!--:8841c779:--></div>
 <div class="observablehq observablehq--block"><!--:2b1041ed:--></div>
 </main>
 </div>
