--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="modulepreload" href="./_node/@turf/turf@7.1.0/index.js">
 <link rel="modulepreload" href="./_npm/bulma-toast@2.4.4/_esm.js">
 <link rel="modulepreload" href="./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js">
-<link rel="modulepreload" href="./_import/components/sorterTableClass.e30ae16e.js">
+<link rel="modulepreload" href="./_import/components/sorterTableClass.1dbbf5d8.js">
 <link rel="modulepreload" href="./_import/components/glyph-designs/timeGlyph.a1969fec.js">
 <link rel="modulepreload" href="./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js">
 <link rel="modulepreload" href="./_import/components/glyph-designs/radialglyph.cbd7ddeb.js">
@@ -216,14 +216,14 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737527185061});
-registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1737527185071});
-registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1737527185071});
-registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1737527185071});
+registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737627973672});
+registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1737627973682});
+registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1737627973682});
+registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1737627973682});
 registerTable("oxford", FileAttachment("./data/oxford_decarbonisation_data.parquet"));
 
 define({id: "ec2b6149", outputs: ["d3","flubber","require","Mutable","turf","bulmaToast","bulmaQuickview","sorterTable","TimeGlyph","GlyphCollection","StreamGraphGlyph","RadialGlyph","RadialGlyphOverall","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","BudgetAllocator","InterventionManager","MiniDecarbModel","createTimelineInterface","LeafletMap","inferTypes","enrichGeoData","normaliseData","insideCell","debounceInput","saveToSession","getFromSession","transformCoordinates","transformGeometry","normalisebyGroup","aggregateValues"], body: async () => {
-const [{require}, {Mutable}, turf, bulmaToast, bulmaQuickview, {sorterTable}, {TimeGlyph, GlyphCollection}, {StreamGraphGlyph}, {RadialGlyph}, {RadialGlyphOverall}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {BudgetAllocator}, {InterventionManager, MiniDecarbModel}, {createTimelineInterface}, {LeafletMap}, {inferTypes, enrichGeoData, normaliseData, insideCell, debounceInput, saveToSession, getFromSession, transformCoordinates, transformGeometry, normalisebyGroup, aggregateValues}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/bulma-toast@2.4.4/_esm.js"), import("./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js"), import("./_import/components/sorterTableClass.e30ae16e.js"), import("./_import/components/glyph-designs/timeGlyph.a1969fec.js"), import("./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js"), import("./_import/components/glyph-designs/radialglyph.cbd7ddeb.js"), import("./_import/components/glyph-designs/radialGlyphOverall.e15902a2.js"), import("./_import/components/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/decarb-model/budget-allocator.5c9a0a07.js"), import("./_import/components/decarb-model/mini-decarbonisation.46bd522e.js"), import("./_import/components/decarb-model/timeline.2b635da2.js"), import("./_import/components/leaflet/leaflet-map.498e936b.js"), import("./_import/components/helpers.c82b92f4.js")]);
+const [{require}, {Mutable}, turf, bulmaToast, bulmaQuickview, {sorterTable}, {TimeGlyph, GlyphCollection}, {StreamGraphGlyph}, {RadialGlyph}, {RadialGlyphOverall}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {BudgetAllocator}, {InterventionManager, MiniDecarbModel}, {createTimelineInterface}, {LeafletMap}, {inferTypes, enrichGeoData, normaliseData, insideCell, debounceInput, saveToSession, getFromSession, transformCoordinates, transformGeometry, normalisebyGroup, aggregateValues}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/bulma-toast@2.4.4/_esm.js"), import("./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js"), import("./_import/components/sorterTableClass.1dbbf5d8.js"), import("./_import/components/glyph-designs/timeGlyph.a1969fec.js"), import("./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js"), import("./_import/components/glyph-designs/radialglyph.cbd7ddeb.js"), import("./_import/components/glyph-designs/radialGlyphOverall.e15902a2.js"), import("./_import/components/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/decarb-model/budget-allocator.5c9a0a07.js"), import("./_import/components/decarb-model/mini-decarbonisation.46bd522e.js"), import("./_import/components/decarb-model/timeline.2b635da2.js"), import("./_import/components/leaflet/leaflet-map.498e936b.js"), import("./_import/components/helpers.c82b92f4.js")]);
 console.log(">> Importing libraries...");
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
@@ -925,7 +925,17 @@ const toggle_grids = Generators.input(toggleGridmaps);
 return {toggleGridmaps,toggle_grids};
 }});
 
-define({id: "53eb1b13", inputs: ["techsInput","startYearInput","addNewIntervention","quickviewDefault"], outputs: ["addInterventionBtn"], body: (techsInput,startYearInput,addNewIntervention,quickviewDefault) => {
+define({id: "905fa32c", outputs: ["filterByIds"], body: () => {
+const filterByIds = (suitableIds) => {
+  return {
+    filterName: `Buildings with IDs in provided list (${suitableIds.length} buildings)`,
+    filterFunction: (building) => suitableIds.includes(building.id),
+  };
+};
+return {filterByIds};
+}});
+
+define({id: "7fab5346", inputs: ["techsInput","startYearInput","addNewIntervention","quickviewDefault"], outputs: ["addInterventionBtn"], body: (techsInput,startYearInput,addNewIntervention,quickviewDefault) => {
 // ----------------- QuickView Event Listeners -----------------
 const addInterventionBtn = document.getElementById("addInterventionBtn");
 
@@ -940,6 +950,7 @@ addInterventionBtn.addEventListener("click", () => {
     optimizationStrategy: "tech-first",
     tech: techsInput.value,
     priorities: [],
+    filters: [],
   };
 
   addNewIntervention(formData);
@@ -1258,7 +1269,7 @@ function modifyIntervention(index, newConfig) {
 return {modifyIntervention};
 }});
 
-define({id: "c4428258", inputs: ["interventions","selectedInterventionIndex","getFromSession","stackedRecap","buildingsData"], outputs: ["selectedIntervenedBuildings","flatData","filteredDatafromTableSession","data"], body: (interventions,selectedInterventionIndex,getFromSession,stackedRecap,buildingsData) => {
+define({id: "5ddd2f10", inputs: ["interventions","selectedInterventionIndex","getFromSession","stackedRecap","buildingsData"], outputs: ["selectedIntervenedBuildings","flatData","filteredDatafromTableSession","data"], body: (interventions,selectedInterventionIndex,getFromSession,stackedRecap,buildingsData) => {
 const selectedIntervenedBuildings =
   interventions[selectedInterventionIndex]?.intervenedBuildings;
 
@@ -1271,11 +1282,16 @@ console.log(">> Intervened buildings", flatData);
 
 const filteredDatafromTableSession = getFromSession("tableFiltered");
 
+// const data =
+//   selectedInterventionIndex === null
+//     ? stackedRecap?.buildings ?? buildingsData
+//     : filteredDatafromTableSession
+//     ? filteredDatafromTableSession
+//     : flatData;
+
 const data =
   selectedInterventionIndex === null
     ? stackedRecap?.buildings ?? buildingsData
-    : filteredDatafromTableSession
-    ? filteredDatafromTableSession
     : flatData;
 // console.log(">> DATA DATA DATA", data);
 return {selectedIntervenedBuildings,flatData,filteredDatafromTableSession,data};
@@ -1345,7 +1361,7 @@ console.log(">> Define table columns...", tableColumns);
 return {excludedColumns,customOrder,tableColumns};
 }});
 
-define({id: "47b4cd63", inputs: ["saveToSession","setTableFiltered","setSelectedTableRow"], outputs: ["tableChanged"], body: (saveToSession,setTableFiltered,setSelectedTableRow) => {
+define({id: "1c78c411", inputs: ["saveToSession","setSelectedTableRow"], outputs: ["tableChanged"], body: (saveToSession,setSelectedTableRow) => {
 function tableChanged(event) {
   console.log("Table changed:", event);
 
@@ -1354,7 +1370,7 @@ function tableChanged(event) {
     console.log("Filter rule:", event.rule);
     saveToSession("tableFiltered", event.indeces);
 
-    setTableFiltered(event.indeces);
+    // setTableFiltered(event.indeces);
   }
 
   if (event.type === "sort") {
@@ -2889,7 +2905,8 @@ return {createOverallPlot};
 <div class="observablehq observablehq--block"><!--:5cf7509f:--></div>
 <div class="observablehq observablehq--block"><!--:a4dfa623:--></div>
 <div class="observablehq observablehq--block"><!--:65366340:--></div>
-<div class="observablehq observablehq--block"><!--:53eb1b13:--></div>
+<div class="observablehq observablehq--block"><!--:905fa32c:--></div>
+<div class="observablehq observablehq--block"><!--:7fab5346:--></div>
 <div class="observablehq observablehq--block"><!--:90a33c18:--></div>
 <!--------------- Budget Allocator ---------------->
 <div class="observablehq observablehq--block"><!--:8f13d3de:--></div>
@@ -2909,10 +2926,10 @@ return {createOverallPlot};
 <div class="observablehq observablehq--block"><!--:f3e9e975:--></div>
 <div class="observablehq observablehq--block"><!--:8d85d522:--></div>
 <!-- ----------------  D A T A  ---------------- -->
-<div class="observablehq observablehq--block"><!--:c4428258:--></div>
+<div class="observablehq observablehq--block"><!--:5ddd2f10:--></div>
 <div class="observablehq observablehq--block"><!--:8043f7ad:--></div>
 <div class="observablehq observablehq--block"><!--:03a232db:--></div>
-<div class="observablehq observablehq--block"><!--:47b4cd63:--></div>
+<div class="observablehq observablehq--block"><!--:1c78c411:--></div>
 <div class="observablehq observablehq--block"><!--:0ac7290d:--></div>
 <div class="observablehq observablehq--block"><!--:55e7c930:--></div>
 <div class="observablehq observablehq--block"><!--:3bbbd90f:--></div>
